# strider

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  contributing.md  search-index.js
benches/: deque.rs  empty_to_probe_for_release_mode.rs  lib.rs  optimized.rs
implementors/strider/: trait.SliceRing.js
src/: lib.rs
src/strider/: lib.rs.html
strider/: index.html  macro.test_slice_ring!.html  sidebar-items.js  struct.SliceRingImpl.html  trait.SliceRing.html
tests/: lib.rs
