[package]
authors = ["Maximilian Krüger <kruemaxi@gmail.com>"]
name = "strider"
version = "0.1.0"
description = "useful for stepping (variable step) a window (variable size) through a streaming (possibly infinite) series of values while avoiding unnecessary memory allocations"
documentation = "https://snd.github.io/strider/strider/index.html"
homepage = "https://github.com/snd/strider"
repository = "https://github.com/snd/strider.git"
readme = "README.md"
keywords = ["sliding", "window", "deque", "stepping"]
license = "MIT"
